@@ -303,7 +303,8 @@ html_write_cell_content (GsfOutput *output, GnmCell *cell, GnmStyle const *style
 				gsf_output_puts (output, "<i>");
 			if (gnm_style_get_font_bold (style))
 				gsf_output_puts (output, "<b>");
-			if (gnm_style_get_font_uline (style) != UNDERLINE_NONE)
+			if (version != HTML40 &&
+			    gnm_style_get_font_uline (style) != UNDERLINE_NONE)
 				gsf_output_puts (output, "<u>");
 			if (font_is_monospaced (style))
 				gsf_output_puts (output, "<tt>");
@@ -380,7 +381,8 @@ html_write_cell_content (GsfOutput *output, GnmCell *cell, GnmStyle const *style
 			}
 			if (font_is_monospaced (style))
 				gsf_output_puts (output, "</tt>");
-			if (gnm_style_get_font_uline (style) != UNDERLINE_NONE)
+			if (version != HTML40 &&
+			    gnm_style_get_font_uline (style) != UNDERLINE_NONE)
 				gsf_output_puts (output, "</u>");
 			if (gnm_style_get_font_bold (style))
 				gsf_output_puts (output, "</b>");
